# depwarden

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
src/depguard/: __init__.py  bloat.py  cli.py  config.py  deps_reader.py  health_score.py  missing.py  models.py  reporter.py  scanner.py  security.py  suggestions.py  unused.py  utils.py
src/depwarden/: __init__.py  bloat.py  cli.py  config.py  deps_reader.py  health_score.py  missing.py  models.py  reporter.py  security.py  suggestions.py  unused.py
tests/: conftest.py  test_bloat.py  test_cli.py  test_deps_reader.py  test_health_score.py  test_missing.py  test_scanner.py  test_security.py  test_unused.py
tests/fixtures/bloated_project/: app.py  requirements.txt
tests/fixtures/healthy_project/: app.py  requirements.txt
tests/fixtures/vulnerable_project/: app.py  requirements.txt
