[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depguard"
version = "0.1.0"
description = "Escape Dependency Hell — Scan, audit, and fix your Python dependencies in one command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "depguard contributors" },
]
keywords = ["dependencies", "security", "vulnerability", "bloat", "audit", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
depguard = "depguard.cli:app"

[project.urls]
Homepage = "https://github.com/depguard/depguard"
Repository = "https://github.com/depguard/depguard"
Issues = "https://github.com/depguard/depguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/depguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["depguard"]
